# nimbus

./: Cargo.toml  README.md
crates/cli/: Cargo.toml  EXAMPLE  README.md
crates/cli/src/: completion.rs  config.rs  main.rs  state.rs
crates/cli/src/tests/: completion.rs  main.rs
crates/cli/test/: README.md
crates/cli/test/command/: cmd-vault.sh  command.toml  send.sh
crates/cli/test/command/data/: hello.txt
crates/cli/test/fs/: fs.toml
crates/cli/test/fs/data/: notes.txt
crates/cli/test/fs/data/docs/: todo.txt
crates/cli/test/http/: http.toml  server.py
crates/cli/test/http/data/: welcome.txt
crates/cli/test/vault-of-vault/: nested.toml
crates/core/: Cargo.toml  README.md
crates/core/src/: app.rs  config.rs  lib.rs
crates/core/src/tests/: app.rs  config.rs
crates/creator/: Cargo.toml  README.md  config_files.toml  configgg.toml
crates/creator/src/: app.rs  builder.rs  event.rs  lib.rs  test.rs  ui.rs
crates/daemon/: Cargo.toml  README.md
crates/tui/: Cargo.toml  LICENSE  README.md
crates/tui/src/: ui.rs
crates/vault/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/vault/src/: config.rs  error.rs  lib.rs  object.rs  vault.rs
crates/vault/src/origin/: command.rs  fs.rs  http.rs  mod.rs  vault.rs
crates/vault/src/origin/tests/: command.rs  fs.rs  http.rs  vault.rs
crates/vault/src/tests/: config.rs  error.rs  object.rs  vault.rs
