[workspace]
resolver = "3"
members = ["crates/cli", "crates/daemon", "crates/tui", "crates/vault"]

[workspace.dependencies]
thiserror = "2.0.18"
futures = "0.3.32"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = {version = "0.7.18", features =["io"]}
chrono = {version = "0.4.45",features = ["serde"]}
async-trait = "0.1.89"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = {version = "1.0.150"}
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
toml = "1.1.2"

