[package]
name = "nimbus-cli"
version = "0.1.0"
edition = "2024"
about = """A CLI tool for managing and syncing Objects in vaults. A vault is a tree like structure like a filesystem 
Vaults store metadata and a way to get the object.
You can make vaults out of APIs, your own filesystem, etc"""

[dependencies]
clap = {version="4.6.1",features=["derive"]}
tokio.workspace = true
nimbus-core = {path="../core/"}
nimbus-creator = {path="../creator/"}
ratatui.workspace = true
anyhow = "1.0.103"
rustyline = "18.0.1"
