[package]
name = "nimbus-tui"
version = "0.1.0"
description = "a TUI for nimbus, an object sync abstraction tool with customizable origin"
authors = ["PeachGB <arianmateos@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
