[package]
name = "nimbus-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes = "1.12.0"
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["full", "test-util"] }
httpmock = "0.7"
