[package]
name = "nimbus-vault"
version = "0.1.1"
edition = "2024"
description = "A generic sync abstraction: a tree of objects (a vault) whose actual storage lives behind a pluggable origin."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PeachGB/nimbus/tree/main/crates/vault"

[dependencies]
async-trait.workspace = true
bytes = "1.12.0"
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["full", "test-util"] }
httpmock = "0.7"
